adjust the version for java8